force-app/src/objects/c2g__ReminderLog__c.object
<CustomObject>
    <description>Custom object to record all the logs for reminders.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reminder Logs</relationshipLabel>
        <relationshipName>ReminderLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AdditionalEmailAddresses__c</fullName>
        <label>Additional Email Addresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__BillingDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Document</label>
        <referenceTo>fferpcore__BillingDocument__c</referenceTo>
        <relationshipLabel>Reminder Logs</relationshipLabel>
        <relationshipName>ReminderLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reminder Logs</relationshipLabel>
        <relationshipName>ReminderLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__EmailContent__c</fullName>
        <label>Email Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ReasonForExclusion__c</fullName>
        <label>Reason For Exclusion</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Reminder__c</fullName>
        <label>Reminder</label>
        <referenceTo>c2g__Reminder__c</referenceTo>
        <relationshipLabel>Reminder Logs</relationshipLabel>
        <relationshipName>ReminderLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__SalesInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Reminder Logs</relationshipLabel>
        <relationshipName>ReminderLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excluded</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>To Send</fullName>
                </value>
                <value>
                    <fullName>Add To Send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Reminder Logs</relationshipLabel>
        <relationshipName>ReminderLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reminder Log</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Reminder__c</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__SalesInvoice__c</columns>
        <columns>c2g__TransactionLineItem__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__LogType__c</columns>
        <columns>c2g__Message__c</columns>
        <columns>c2g__EmailContent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ffaws__Yesterday</fullName>
        <columns>NAME</columns>
        <columns>c2g__Reminder__c</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__SalesInvoice__c</columns>
        <columns>c2g__TransactionLineItem__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__LogType__c</columns>
        <columns>c2g__Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterday Reminder Logs</label>
    </listViews>
    <nameField>
        <displayFormat>CSRL-{000000000}</displayFormat>
        <label>Reminder Log Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminder Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>